# FokaRos2RPi4

./: README.md  start_ros.sh
data/: data_log_20250618_110934.csv  data_log_20250618_114354.csv  data_log_20250622_145954.csv  data_log_20250624_184456.csv  data_log_20250624_185533.csv  data_log_20250707_145257.csv  data_log_20250707_145618.csv  data_log_20250707_145915.csv  data_log_20250707_155938.csv  data_log_20250707_162818.csv  data_log_20250707_163623.csv  data_log_20250707_170520.csv  data_log_20250707_174710.csv  data_log_20250717_130602.csv  data_log_20250717_131708.csv  data_log_20250717_132220.csv  data_log_20250717_133031.csv  data_log_20250717_133304.csv  data_log_20250717_133819.csv  data_log_20250717_152117.csv  data_log_20250717_153204.csv  data_log_20250717_153514.csv  data_log_20250717_154044.csv  data_log_20250717_154426.csv  data_log_20250717_154618.csv  data_log_20250717_154836.csv  data_log_20250717_160401.csv  data_log_20250720_212433.csv  data_log_20250825_112132.csv  data_log_20250825_112824.csv  data_log_20250825_113051.csv  data_log_20251022_164745.csv  data_log_20251022_172917.csv  data_log_20251022_173154.csv  data_log_20251022_182217.csv  data_log_20251022_182430.csv  data_log_20251022_182621.csv  data_log_20251022_182900.csv  data_log_20251022_183109.csv  data_log_20251022_183220.csv  (+22 more)
install/: local_setup.sh  setup.sh
log/: latest_build
obrot10/: metadata.yaml  obrot10_0.db3
obrot2/: metadata.yaml  obrot2_0.db3
src/msg_interfaces/: CMakeLists.txt  package.xml
src/msg_interfaces/msg/: GpsData.msg  SensorData.msg
(+273 files in other folders)
